--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,10 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./my-portfolio
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,9 +30,12 @@ jobs:
         with:
           node-version: 20
           cache: "npm"
+          cache-dependency-path: "./my-portfolio/package-lock.json"
 
       - name: Install dependencies
+        run: npm install
         run: npm ci
+     
 
       - name: Build Next.js (static export)
         env:
@@ -38,7 +45,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out/MySite
+          path: ./my-portfolio/MySite
 
   deploy:
     runs-on: ubuntu-latest
