--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./my-portfolio/MySite
+          path: ./MySite/my-portfolio
 
   deploy:
     runs-on: ubuntu-latest
