--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Next.js to GitHub Pages
 
 on:
   push:
-    branches: ["develop"]
+    branches: ["develop"]        
   workflow_dispatch:
 
 permissions:
@@ -17,9 +17,6 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./my-portfolio
 
     steps:
       - name: Checkout
@@ -29,14 +26,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
-          cache-dependency-path: "./my-portfolio/package-lock.json"
 
       - name: Install dependencies
+        working-directory: ./my-portfolio
         run: npm install
-     
 
       - name: Build Next.js (static export)
+        working-directory: ./my-portfolio
         env:
           GITHUB_TOKEN_FOR_API: ${{ secrets.GITHUB_TOKEN_FOR_API }}
         run: npm run build
@@ -44,7 +40,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./MySite/my-portfolio
+          path: ./my-portfolio/out/MySite
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,6 +48,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
