--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./my-portfolio/out
+          path: ./MySite/my-portfolio/out
 
   deploy:
     runs-on: ubuntu-latest
